--- a/templates/default/passenger.conf.erb
+++ b/templates/default/passenger.conf.erb
@@ -1,16 +1,11 @@
-<% ns = node['ns'] %>
-passenger_root <%= node[ns]['nginx']['passenger']['root'] %>;
-passenger_ruby <%= node[ns]['nginx']['passenger']['ruby'] %>;
-passenger_max_pool_size <%= node[ns]['nginx']['passenger']['max_pool_size'] %>;
-passenger_spawn_method <%= node[ns]['nginx']['passenger']['spawn_method'] %>;
-passenger_buffer_response <%= node[ns]['nginx']['passenger']['buffer_response'] %>;
-passenger_min_instances <%= node[ns]['nginx']['passenger']['min_instances'] %>;
-passenger_max_instances_per_app <%= node[ns]['nginx']['passenger']['max_instances_per_app'] %>;
-passenger_pool_idle_time <%= node[ns]['nginx']['passenger']['pool_idle_time'] %>;
-passenger_max_requests <%= node[ns]['nginx']['passenger']['max_requests'] %>;
-passenger_app_env production
-passenger_default_user <%= node[ns]['nginx']['passenger']['passenger_default_user']  %>;
-passenger_user <%= node[ns]['nginx']['passenger']['passenger_default_user']  %>;
-passenger_default_group <%= node[ns]['nginx']['passenger']['passenger_default_user']  %>;
-passenger_group <%= node[ns]['nginx']['passenger']['passenger_default_user']  %>;
+passenger_root <%= node['nginx']['passenger']['root'] %>;
+passenger_ruby <%= node['nginx']['passenger']['ruby'] %>;
+passenger_max_pool_size <%= node['nginx']['passenger']['max_pool_size'] %>;
+passenger_spawn_method <%= node['nginx']['passenger']['spawn_method'] %>;
+passenger_buffer_response <%= node['nginx']['passenger']['buffer_response'] %>;
+passenger_min_instances <%= node['nginx']['passenger']['min_instances'] %>;
+passenger_max_instances_per_app <%= node['nginx']['passenger']['max_instances_per_app'] %>;
+passenger_pool_idle_time <%= node['nginx']['passenger']['pool_idle_time'] %>;
+passenger_max_requests <%= node['nginx']['passenger']['max_requests'] %>;
+passenger_app_env <%= node.chef_environment %>;
 passenger_user_switching off;
